test/FAIL/stepcmd/autres/02_test_step.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no file loaded"
#-------

step into